--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>ToxNgx</title>
   <base href="/">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ToxNgx</title>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="app header-fixed sidebar-fixed">
   <tox-root>Loading...</tox-root>
 </body>
 </html>
