--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <title>ToxNgx</title>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body class="app header-fixed sidebar-fixed">
   <tox-root>Loading...</tox-root>
