add simple line icons

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/css/simple-line-icons.css" rel="stylesheet">
 </head>
 <body class="app header-fixed sidebar-fixed">
   <tox-root>Loading...</tox-root>
