--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- ICON FONTS -->
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
 </head>
 <body>
   <tox-root>Loading...</tox-root>
