add pure admin-layout (most components missing ... only dummies)

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="hui-buh">
   <tox-root>
     <style type="text/css">
       @keyframes spinner {
